--- a/Locar_Walisson_Cabral/css/stylesheet.css
+++ b/Locar_Walisson_Cabral/css/stylesheet.css
@@ -1,38 +1,54 @@
-*{
-    box-sizing: border-box;
-
-}
-body{
-    font-family: 'open sans',sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
+@import url("reset.css");
+@import url("grid.css");
+@import url("buttons.css");
 #header{
-background: url("../img/background-header.png")no-repeat;
+    background: url("../img/background-header.png")no-repeat;
     background-size: cover;
     color: #fff;
     width: 100%;
     height: 660px;
     padding-top: 30px;
+    position: relative;
 }
-
-a{
-        text-decoration: none;
-    }
 
 #header a{
-color: #fff;
+    color: #ffffff;
 }
+
+#header nav a{
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 25px;
+    font-weight: bold;
+}
+#header nav a:hover, #header nav a.active{
+background-color: rgba(255, 0, 0, 09);
+}
+
 #header nav{
     text-align: right;
 }
+
 #header nav ul, #header nav ul li {
     display: inline-block;
     margin: 0;
     padding:0;
 }
+
 #header .title{
+    text-align: center;
+    position: absolute;
+    left: 0;
+    top:50%;
+    transform: translate(0,-50%);
+}
+
+#header h1{
+    font-size: 54px;
+}
+#how-it-work{
     text-align: center;
 }
 
