--- a/Locar_Walisson_Cabral/css/stylesheet.css
+++ b/Locar_Walisson_Cabral/css/stylesheet.css
@@ -10,7 +10,7 @@ body{
 }
 
 #header{
-    background: url("../img/background-header.png")no-repeat;
+    background: #000 no-repeat fixed;
     background-size: cover;
     color: #fff;
     width: 100%;
@@ -33,6 +33,7 @@ body{
 }
 #header nav a:hover, #header nav a.active{
 background-color: rgba(255, 0, 0, 09);
+    transition: ease .3s all;
 }
 
 #header nav{
@@ -56,48 +57,54 @@ background-color: rgba(255, 0, 0, 09);
 #header h1{
     font-size: 54px;
 }
-
-#team, #ours-vehicles, #how-it-work{
-    text-align: center;
+.section{
     padding: 30px 0 30px 0;
 }
+.section-center{
+    text-align: center;
+}
+#footer{
+    background-color: rgb(51,51,51);
+    text-align: left;
+}
+#footer, #footer a {
+    color: rgb(204,204,204);
+}
+#footer nav li a:hover{
+    color: rgb(255,255,255);
+}
+#footer h3, #footer nav li{
+    text-transform: uppercase;
+}
+#footer h3:after{
+    content: '';
+    display:block;
+    border-bottom: 2 px solid rgb(204,204,204);
+}
+#footer nav li{
+    padding: 3px 0;
+}
+#footer .social{
+    height: 200px;
+    line-height: 200px;
+    text-align: right;
+}
+#footer .social a{
+    display: inline-block;
+    padding: 0 0 0 10px;
+    opacity: 1;
+}
+#footer .social a:hover{
+    opacity: .5;
+    transition: ease .3s all;
+}
+#footer .social img{
+    vertical-align: middle;
+}
 
-#ours-vehicles{
-background-color: rgb(242,242,242);
-}
-#ours-vehicles .btn{
-    margin-top: 80px;
-    background-color: rgb(220, 220,220);
-    color:rgb(130, 130, 130);
-}
-#ours-vehicles .btn:hover{
-    background-color: rgb(130, 130, 130);
-    color:rgb(220, 220, 220);
-}
-#ours-vehicles .btn .material-icons{
-    vertical-align: center;
-    font-size: 20px;
+#copyright{
+    background-color: rgb(34,34,34);
+    text-align: center;
+    padding: 10px;
 }
 
-#ours-vehicles .container{
-    max-width: 1000px;
-    height: 500px;
-}
-
-#ours-vehicles .container img{
-    width: 200px;
-    height: 150px;
-    margin-bottom: 30px;
-}
-
-#team{
-background-color: rgb(209, 67, 60);
-    color:white;
-}
-#team .img-box-round{
-    width: 120px;
-    height: 120px;
-}
-#team h2:after{
-    background-color: rgb(255, 255, 255);
-}
